<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AndroidLabs</string>
    <string name="hello_world">Hello World</string>
    <string name="button_text">Click Me</string>

    <!-- Lab 2 translations -->
    <string name="app_text">I love Android</string>
    <string name="switch_text">Activate Dark Mode</string>
    <string name="checkbox_text">Remember my choice</string>
    <string name="edit_hint">I love Android</string>
    <string name="toast_message">Settings Saved</string>
    <string name="snackbar_text">This is a snackbar</string>
    <string name="undo">Undo</string>
    <string name="flag_desc">Flag of Canada</string>

    <!-- Lab 3 translations -->
    <string name="enter_name">Enter your name</string>
    <string name="name_hint">Your name here</string>
    <string name="next">Next</string>
    <string name="thank_you">Thank You</string>
    <string name="dont_call_me">Don’t call me that</string>

    <!-- Lab 4: To Do App -->
    <string name="type_here">Type Here</string>
    <string name="urgent">Urgent</string>
    <string name="add">Add</string>
    <string name="delete_title">Do you want to delete this?</string>
    <string name="delete_message">The selected row is:</string>
    <string name="delete_positive">Yes</string>
    <string name="delete_negative">No</string>

    <!-- Cursor Info -->
    <string name="cursor_db_version">DB Version: </string>
    <string name="cursor_column_count">Column Count: </string>
    <string name="cursor_column_name">Column: </string>
    <string name="cursor_row_count">Row Count: </string>
    <string name="cursor_row_data">Row: </string>

    <!-- Lab 6: Image Slider -->
    <string name="image_slider_title">Image Viewer</string>
    <string name="next_button">Next</string>
    <string name="image_desc">Displayed image in slider</string>
</resources>
